--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* Global Styles */
+@use 'sass:color';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 /* Custom Theme */
@@ -29,7 +30,7 @@ button {
   transition: all 0.3s ease;
 
   &:hover {
-    background-color: darken(#3f51b5, 10%);
+    background-color: color.adjust(#3f51b5, $lightness: 10%);
     transform: translateY(-2px);
   }
 }
